--- a/PHP Final Assignment/FA_Login.css
+++ b/PHP Final Assignment/FA_Login.css
@@ -1,117 +1,63 @@
 body {
-  background-image: url('images/bg1.jpg');
-  background-repeat: 1;
-  background-size: 100%;
-  font-family: Times, sans-serif;
-}
-
-.wrapper {
-  width: 500px;
-  padding: 30px;
-  margin: 50px auto;
-  background-color: lightyellow;
-  border-radius: 10px;
-  text-align: center;
-  box-shadow: 0 20px 35px rgba(red, green, blue, alpha);
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-}
-
-nav {
-  background: green;
-  height: 80px;
-  width: 100%;
-}
-
-label.logo {
-  color: white;
-  font-size: 35px;
-  line-height: 80px;
-  padding: 0 100px;
-  font-weight: bold;
-}
-
-nav ul {
-  float: right;
-  margin-right: 20px;
-}
-
-nav ul li {
-  display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
-}
-
-nav ul li a {
-  color: white;
-  font-size: 17px;
-  padding: 8px 12px;
-  border-radius: 100px;
-  text-transform: uppercase;
-}
-
-a.active,
-a:hover {
-  background: #1b9bff;
-  transition: .5s;
-}
-
-@media (max-width: 952px) {
-  label.logo {
-    font-size: 30px;
-    padding-left: 50px;
+    background-image: url('images/food.jpg');
+    background-repeat: 1;
+    background-size: 100%;
+    font-family: Times, sans-serif;
   }
-
-  nav ul li a {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 858px) {
-  .checkbtn {
-    display: block;
-  }
-
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 80px;
-    left: -100%;
+  
+  .wrapper {
+    width: 500px;
+    padding: 30px;
+    margin: 50px auto;
+    background-color: lightyellow;
+    border-radius: 10px;
     text-align: center;
-    transition: all .5s;
+    box-shadow: 0 20px 40px;
   }
-
+  
+  * {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+  }
+  
+  nav {
+    background: green;
+    height: 80px;
+    width: 100%;
+  }
+  
+  label.logo {
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+  }
+  
+  nav ul {
+    float: right;
+    margin-right: 20px;
+  }
+  
   nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
   }
-
+  
   nav ul li a {
-    font-size: 20px;
+    color: white;
+    font-size: 17px;
+    padding: 8px 12px;
+    border-radius: 100px;
+    text-transform: uppercase;
   }
-
-  a:hover,
-  a.active {
-    background: none;
-    color: #0082e6;
+  
+  a.active,
+  a:hover {
+    background: #1b9bff;
+    transition: .5s;
   }
-
-  #check:checked~ul {
-    left: 0;
-  }
-}
-
-section {
-  background: url(bg1.jpg) no-repeat;
-  background-size: cover;
-  height: calc(100vh - 80px);
-}
